Testing and example plugin